# pytch-webapp

./: cypress.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.mts
cypress/common/: utils.ts
cypress/e2e/: code-editor.cy.ts  demos-of-tutorials.cy.ts  diff-help.cy.ts  front-page.cy.ts  fullscreen.cy.ts  google-drive.cy.ts  help-sidebar.cy.ts  media-library.cy.ts  no-stale-modals.cy.ts  project-asset-list.cy.ts  project-from-specimen.cy.ts  project-list.cy.ts  stage-control-actions.cy.ts  stage-interaction.cy.ts  suggest-demo.cy.ts  tutorials.cy.ts  utils.ts  variable-watchers.cy.ts
cypress/support/: commands.ts  e2e.ts  index.d.ts
doc/: pyproject.toml
doc/source/developer/: content-hashes.rst  linked-content.rst  zipfile-format.rst
public/data/: help-sidebar.json
src/: App.tsx  constants.ts  font-awesome-lib.ts  help-sidebar.scss  main.tsx  pytch-ide.scss  pytch-jr-common.scss  pytch-jr-ide.scss  pytch-jr-lesson.scss  pytch-mixins.scss  pytch-standalone-play-demo.scss  pytch-tutorial.scss  pytch-variables.scss  pytch.scss  store.ts  utils.ts
src/components/: AllModals.tsx  AssetThumbnail.tsx  CodeEditor.tsx  DebugButtons.tsx  DebugCards.tsx  DebugPane.tsx  DebugTab.tsx  EditorAndOutErr.tsx  ErrorReportList.tsx  FullScreenLayout.tsx  HelpSidebar.tsx  IDE.tsx  IDEContents_Flat.tsx  IDELayout.tsx  InfoPanel.tsx  ProjectAssetList.tsx  ProjectFromSpecimenFlow.tsx  ProjectList.tsx  SingleTab.tsx  Stage.tsx  StageControls.tsx  (+8 more)
tools/: typecheck-at-commit.sh
tools/editor-style-images/: pyproject.toml
website-layer/: make.sh
(+91 files in other folders)
