[project]
name = "pytch-webapp-doc"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben North",email = "ben.north@tcd.ie"}
]
readme = "README-developing-docs.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2025.0.0)",
    "furo (>=2024.8.6,<2025.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
